--- a/views/shop/product/productDetail.ejs
+++ b/views/shop/product/productDetail.ejs
@@ -475,6 +475,8 @@
             duration: 750,
             interval: 3000
         }); 
+
+        if ($('#relativeProduct').length)
         $('#relativeProduct').multislider({
             duration: 750,
             interval: 3000
