--- a/views/shop/product/shop.ejs
+++ b/views/shop/product/shop.ejs
@@ -1,3 +1,4 @@
+<title><%-title%></title>
 <link rel="stylesheet" href="/stylesheets/css/first_page.css">
 <% include ../../partials/header %>
 <script src="/javascripts/js/shop.js"></script>
@@ -23,14 +24,11 @@
                                     
                                      </a></strong> 
 
-                                    
-                                    
-                                            <ul class="menu-content-show">
-                                                <li><a href="" class="link" ></a></li>
-                                                <br> 
-                                             </ul>
+                                        <ul class="menu-content-show">
+                                            <li><a href="" class="link" ></a></li>
+                                            <br> 
+                                        </ul>
                                   
-
                                   </li>
                               
                                </ul>
@@ -216,25 +214,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="special_details">
-                        <div>
-                        <h5 class="special_details_css">Sản phẩm nổi bật</h3>
-                        </div>
-                        <div style="margin-top: 30px; padding-bottom: 20px;">
-                            
-                            <div class="block_product_special" style="margin: 10px; margin-top: 20px; display: flex;">
-                                <div class="col-sm-5" style="padding: 0;">
-                                    <img class="special_details_image" src="/uploads/" style="width: 100%;" alt="">
-                                </div>
-                                <div class="col-sm-7 special_details_info">
-                                    <h6 class="special_details_name" style="color: #504d4d; font-family: Lora; font-size: 17px;"><h6>
-                                    <p class="special_details_price">₫</p>
-                                    <a href="/shop/product/" style="color: #F65E39; text-decoration: underline;">Xem chi tiết</a>
-                                </div>
-                            </div>
-                         
-                        </div>
-                    </div>   
+                   
                 </div>
                 <div class="khoichua col-sm-9">
                     <div class="select_product clearfix" style="border-bottom: solid 1px #bfbfbf; margin-bottom: 30px;">
