--- a/public/stylesheets/slider_item.css
+++ b/public/stylesheets/slider_item.css
@@ -157,6 +157,8 @@ z-index:1;
 transition:all .3s;
 margin:0 auto;
 padding:12px 0;
+width: 220px;
+white-space: normal;
 }
 
 .product-grid:hover .product-content {
@@ -171,6 +173,7 @@ text-transform:capitalize;
 transition:all .3s ease 0;
 margin:0 0 10px;
 margin-bottom: 0;
+line-height: 20px;
 }
 
 .product-grid .title a {
