--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-md-3 register-left">
                 <img src="/images/logo2.png" alt=""/>
-                <h3>Chào mừng đến với Funiture Shop</h3>
+                <h3>Chào mừng đến với Furniture Shop</h3>
                 <p>Sàn thương mại điện tử hỗ trợ mua và bán các sản phẩm liên quan đến nội thất nhà ở</p>
                 <a href="/login"><input type="submit" name="" value="Đăng nhập"/></a>
                 <a href="/"><input type="submit" name="" value="Trang chủ"/ style="margin: 0;"></a><br/>
