--- a/views/admin/finance/income.ejs
+++ b/views/admin/finance/income.ejs
@@ -43,7 +43,7 @@
                     Tổng cộng
                 </div>
                 <div class="value-report">
-                    <%- VND(parseInt(paidThisMonth))%>
+                    <%- VND(parseInt(paidAll))%>
                 </div>
             </div>
         </div>
@@ -115,7 +115,7 @@
                                              <a href="/seller/order/detail/<%-item.orderId%>" class="ct-item-product-name"><%-i.name%></a>
                                              <div><%-i.variant == ''?'': 'Phân loại: ' + i.variant%></div>
                                              <div>x<%-i.amount%></div>
-                                             <% total += (i.amount*i.price - i.amount*i.price*i.discount/100) + i.fee%>
+                                             <% total += (i.amount*i.price - i.amount*i.price*i.discount/100)%>
                                          </div>
                                      </div>
                                  </div>
