--- a/views/admin/order/order.ejs
+++ b/views/admin/order/order.ejs
@@ -80,7 +80,7 @@
                                             </p>
                                         </div>
                                         <div>x<%-i.amount%></div>
-                                        <% total += (i.amount*i.price - i.amount*i.price*i.discount/100) + i.fee%>
+                                        <% total += (i.amount*i.price - i.amount*i.price*i.discount/100)%>
                                     </div>
                                 </div>
                             </div>
