--- a/views/admin/order/orderDetail.ejs
+++ b/views/admin/order/orderDetail.ejs
@@ -117,7 +117,7 @@
                 <div class="order-detail">
                     <%-VND(info.shippingfee)%>
                  </div>
-                 <div class="order-detail total"><%-VND(totalVoucher + info.shippingfee)%></div>
+                 <div class="order-detail total"><%-VND(totalVoucher)%></div>
             </div>
         </div>
     </div>  
