--- a/views/admin/dashboards.ejs
+++ b/views/admin/dashboards.ejs
@@ -25,10 +25,50 @@
 <!-- Tempusdominus Bootstrap 4 -->
 <script src="/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
 
+<!--chart-->
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/series-label.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/export-data.js"></script>
+
 <style>
   .collapse.in {
     display: block !important;
 }
+.highcharts-figure, .highcharts-data-table table {
+    min-width: 310px; 
+    max-width: 800px;
+    margin: 1em auto;
+}
+
+.highcharts-data-table table {
+	font-family: Verdana, sans-serif;
+	border-collapse: collapse;
+	border: 1px solid #EBEBEB;
+	margin: 10px auto;
+	text-align: center;
+	width: 100%;
+	max-width: 500px;
+}
+.highcharts-data-table caption {
+    padding: 1em 0;
+    font-size: 1.2em;
+    color: #555;
+}
+.highcharts-data-table th {
+	font-weight: 600;
+    padding: 0.5em;
+}
+.highcharts-data-table td, .highcharts-data-table th, .highcharts-data-table caption {
+    padding: 0.5em;
+}
+.highcharts-data-table thead tr, .highcharts-data-table tr:nth-child(even) {
+    background: #f8f8f8;
+}
+.highcharts-data-table tr:hover {
+    background: #f1f7ff;
+}
+
 </style>
 <div class="content-wrapper-dash">
     <!-- Content Header (Page header) -->
@@ -166,7 +206,9 @@
           <!-- Left col -->
           <section class="col-lg-7 connectedSortable">
             <!-- /.card -->
-
+            <figure class="highcharts-figure">
+              <div id="container"></div>
+            </figure>
             <!-- /.card -->
           </section>
           <!-- /.Left col -->
@@ -229,4 +271,52 @@
     <!-- /.content -->
 </div>
 
+<script>
+  Highcharts.chart('container', {
+    chart: {
+        type: 'spline'
+    },
+    title: {
+        text: 'Phân tích bán hàng'
+    },
+    subtitle: {
+        text: 'Doanh thu trong tuần này'
+    },
+    xAxis: {
+        categories: ['Thứ 2', 'Thừ 3', 'Thứ 4', 'Thứ 5', 'Thứ 6', 'Thứ 7',
+            'Chủ nhật']
+    },
+    yAxis: {
+        title: {
+            text: 'Temperature'
+        },
+        labels: {
+            formatter: function () {
+                return this.value + '°';
+            }
+        }
+    },
+    tooltip: {
+        crosshairs: true,
+        shared: true
+    },
+    plotOptions: {
+        spline: {
+            marker: {
+                radius: 4,
+                lineColor: '#666666',
+                lineWidth: 1
+            }
+        }
+    },
+    series: [{
+        name: 'Tokyo',
+        marker: {
+            symbol: 'square'
+        },
+        data: [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2]
+
+    }]
+});
+</script>
 <% include ../partials/footer_admin %>
