--- a/views/adminSys/order/orderDetail.ejs
+++ b/views/adminSys/order/orderDetail.ejs
@@ -121,7 +121,7 @@
                 <div class="order-detail"><%-VND(total)%></div>
                 <div class="order-detail"><%-VND(-voucher)%></div>
                 <div class="order-detail"><%-VND(info.shippingfee)%></div>
-                <div class="order-detail income"><%-VND(totalVoucher + info.shippingfee)%></div>
+                <div class="order-detail income"><%-VND(totalVoucher)%></div>
             </div>
         </div>
     </div>  
