--- a/views/adminSys/product/viewProduct.ejs
+++ b/views/adminSys/product/viewProduct.ejs
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="/javascripts/assets/app.css">
 
 <div class="category-link">
-    <a href="/admin">Trang chủ</a> >
+    <a href="/admin/product">Back > </a>
     <span style="color: red">Xem sản phẩm</span>
 </div>
 
@@ -22,15 +22,6 @@
 
     <form action="" method="POST" name="frmEditProduct">
         <div class="col-lg-7" style="padding-bottom:120px">
-            <div class="form-group">
-                <label>Thương hiệu</label>
-                <select class="form-control" name="brand" disabled>
-                    <option value="">Please Choose Brand</option>
-                   
-                        <option value=""></option> 
-                  
-                </select>
-            </div>
             <div class="form-group">
                 <label>Danh mục lớn</label>
                 <select class="form-control par-cate" name="cate1" disabled>
@@ -56,8 +47,14 @@
                 <select class="form-control" name="material" disabled>
                     <option value="">Please Choose Material</option>
                    
-                      <option value="test" selected >test</option>
-                   
+                    <option value="Vải" <%-material == 'Vải' ? 'selected' : ''%>>Vải</option>
+                    <option value="Gỗ công nghiệp" <%-material == 'Gỗ công nghiệp' ? 'selected' : ''%>>Gỗ công nghiệp</option>
+                    <option value="Gỗ tự nhiên" <%-material == 'Gỗ tự nhiên' ? 'selected' : ''%>>Gỗ tự nhiên</option>
+                    <option value="Cao su tổng hợp" <%-material == 'Cao su tổng hợp' ? 'selected' : ''%>>Cao su tổng hợp</option>
+                    <option value="Cao su thiên nhiên" <%-material == 'Cao su thiên nhiên' ? 'selected' : ''%>>Cao su thiên nhiên</option>
+                    <option value="Nhựa" <%-material == 'Nhựa' ? 'selected' : ''%>>Nhựa</option>
+                    <option value="Nhựa" <%-material == 'Composite' ? 'selected' : ''%>>Composite</option>
+                    <option value="Kim loại" <%-material == 'Kim loại' ? 'selected' : ''%>>Kim loại</option>
                 </select>
             </div>
             <div class="form-group">
@@ -70,12 +67,9 @@
             </div>
             <div class="form-group">
                 <label>Miêu tả</label>
-                <textarea class="form-control" rows="3" name="description" id="description"  disabled></textarea>
+                <textarea class="form-control" rows="3" name="description" id="description"  disabled><%-description%></textarea>
             </div>
-            <div class="form-group">
-                <label>Nội dung</label>
-                <textarea class="form-control" rows="3" name="content" id="content" disabled></textarea>
-            </div>
+
 
             <div class="col-md-4">
                <div>
@@ -85,7 +79,7 @@
             </div>
             
             <div class="col-md-12 product-act">
-               <button type="reset" class="btn btn-default"><a href="/admin">Quay lại</a></button> 
+               <button type="reset" class="btn btn-default"><a href="/admin/product/#tab4">Quay lại</a></button> 
               
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Báo vi phạm</button>
                 <%if (status == -1) {%>
