--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -178,7 +178,7 @@
                             <a class="nav-link" href="#"><span>Liên Hệ</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><span>Hệ Thống Cửa Hàng</span></a>
+                            <a class="nav-link" href="#"><span>Cửa Hàng</span></a>
                         </li>
                     </ul>
                 </div>
