--- a/views/admin/order/order.ejs
+++ b/views/admin/order/order.ejs
@@ -139,7 +139,7 @@
                                     </button>
                                    <ul class="dropdown-menu action-product" aria-labelledby="dropdownMenu1">
                                       <li><a href="/seller/order/detail/<%-item.orderId%>">Chi tiết</a></li>
-                                      <li><a href="/seller/order/detail/<%-item.orderId%>">Hủy đơn hàng</a></li>
+                                      <li><a data-id="<%-item.orderId%>" class="order-cancel-seller">Hủy đơn hàng</a></li>
                                     </ul>
                                 </div>
                             </div>
