--- a/views/adminSys/order/order.ejs
+++ b/views/adminSys/order/order.ejs
@@ -141,6 +141,7 @@
                                 </button>
                                <ul class="dropdown-menu action-product" aria-labelledby="dropdownMenu1">
                                   <li><a href="/admin/order/detail/<%-item.orderId%>">Chi tiết</a></li>
+                                  <li><a data-id="<%-item.orderId%>" class="order-cancel">Hủy đơn hàng</a></li>
                                 </ul>
                             </div>
                         <%}%>
