--- a/views/admin/order/order.ejs
+++ b/views/admin/order/order.ejs
@@ -73,7 +73,7 @@
                             <div class="item-product">
                                 <div class="ct-item-product-inner">
                                     <div class="product-info">
-                                        <a href="/seller/order/detail/<%-item.orderId%>" class="ct-item-product-name"><%-i.name%></a>
+                                        <a href="/seller/order/detail/<%-item.orderId%>" class="ct-item-product-name name-wrap-text name-product"><%-i.name%></a>
                                         <div class="order-wrap-text">
                                             <p>
                                                 <%-i.variant == ''?'': 'Phân loại: ' + i.variant%>
