--- a/views/admin/dashboards.ejs
+++ b/views/admin/dashboards.ejs
@@ -270,7 +270,7 @@
     </section>
     <!-- /.content -->
 </div>
-<input type="text" value="<%-data_income%>" id="income">
+<input type="text" value="<%-data_income%>" id="income" hidden>
 <script>
   var da = $('#income').val().split(',');
   var b =  da.map(i => {
